--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   
+    <link rel="stylesheet" href="java/css/main.css">
     <title>electrical</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 <li><a href="https://en.wikipedia.org/wiki/Electrical_element">wikimedia</a>
 
 </li>
-<li><a href="http://engineering.nyu.edu/mechatronics/Control_Lab/Criag/Craig_RPI/2001/Physical_Modeling_Electrical.pdf">Electrical System Elements</a>
+<li><a href="http://engineering.nyu.edu/mechatronics/Control_Lab/Criag/Craig_RPI/2001/Physical_Modeling_Electrical.pdf">Electrical Elements</a>
 
 </li>
 
@@ -27,9 +27,11 @@
 </nav>
 </header>
 <main>
+    <section id="first">
     <img src="photo/generator 1.jpg" alt="">
     <img src="photo/transformer.jpg" alt="">
     <img src="photo/transmission line 1.jpg" alt="">
+</section>
 </main>
 <footer>
 
